--- a/src/styles/_text.scss
+++ b/src/styles/_text.scss
@@ -5,19 +5,27 @@ $margin-h: 32px;
 
 $meta-margin-bottom: 32px;
 
-$header-size: 28px;
-$header-line: 40px;
+$header-size: 32px;
+$header-line: 46px;
 $header-margin-top: 0;
 $header-margin-bottom: 8px;
 
 $subheader-size: 18px;
 $subheader-line: 24px;
 $subheader-margin-top: 0px;
-$subheader-margin-bottom: 14px;
+$subheader-margin-bottom: 18px;
 
-$body-size: 14px;
-$body-line: 21px;
-$body-margin-bottom: 14px;
+$body-size: 16px;
+$body-line: 24px;
+$body-margin-bottom: 24px;
+
+$detail-size: 12px;
+$detail-line: 18px;
+$detail-margin-bottom: 18px;
+
+
+$subheader-line-wide: 27px;
+$subheader-margin-bottom-wide: 27px;
 
 
 $d-header-size: 46px;
@@ -29,6 +37,10 @@ $d-subheader-size: 24px;
 $d-subheader-line: 36px;
 $d-subheader-margin-top: 0px;
 $d-subheader-margin-bottom: 24px;
+
+$d-subheader-margin-top-wide: 12px;
+$d-subheader-margin-bottom-wide: 36px;
+
 
 $d-body-size: 18px;
 $d-body-line: 30px;
@@ -56,9 +68,6 @@ h1 {
     margin-top: $header-margin-top;
     font-weight: 700;
 
-    margin-left: $margin-h;
-    margin-right: $margin-h;
-
     font-family: 'Roboto Condensed';
 }
 
@@ -69,32 +78,35 @@ h2, h3, h4, h5, h6 {
     margin-block-start: 0;
     margin-top: $d-subheader-margin-top;
     margin-bottom: $d-subheader-margin-bottom;
-    margin-left: $margin-h;
-    margin-right: $margin-h;
     padding-top: 24px;
+}
+
+blockquote {
+    font-size: $d-subheader-size;
+    line-height: $d-subheader-line;
+    margin-block-end: 0;
+    margin-block-start: 0;
+    padding-top: $d-subheader-margin-top-wide;
+    margin-bottom: $d-subheader-margin-bottom-wide;
+    font-style: italic;
+    color: $color-grey;
 }
 
 
 p {
     margin: 0;
     text-align: left;
-    margin-left: $margin-h;
-    margin-right: $margin-h;
     margin-bottom: $d-body-margin-bottom;
 }
 
 ol {
     margin: 0;
     text-align: left;
-    margin-left: $mobile-margin-h;
-    margin-right: $mobile-margin-h;
 }
 
 ul {
     margin: 0;
     text-align: left;
-    margin-left: $mobile-margin-h;
-    margin-right: $mobile-margin-h;
     padding-left: 0;
     padding-inline-start: 24px;
 }
@@ -114,8 +126,6 @@ a {
 }
 
 pre {
-    margin-left: $margin-h;
-    margin-right: $margin-h;
 }
 
 code {
@@ -129,8 +139,6 @@ code {
 
 figcaption {
     text-align: center;
-    margin-left: $margin-h;
-    margin-right: $margin-h;
     font-style: italic;
     color: $color-grey;
     font-weight: 300;
@@ -170,6 +178,8 @@ figure {
     font-weight: bold;
     line-height: 21px;
     color: $color-blu;
+    padding-left: $mobile-margin-h;
+    padding-right: $mobile-margin-h;
 }
 
 .text-highlight-open {
@@ -188,33 +198,32 @@ figure {
     h1 {
         font-size: $header-size;
         line-height: $header-line;
-        margin-left: $mobile-margin-h;
-        margin-right: $mobile-margin-h;
     }
 
     h2, h3, h4, h5, h6 {
         font-size: $subheader-size;
         line-height: $subheader-line;
-        margin-left: $mobile-margin-h;
-        margin-right: $mobile-margin-h;
         margin-bottom: $subheader-margin-bottom;
         padding-top: 16px;
         padding-bottom: 8px;
     }
 
+    blockquote {
+        font-size: $subheader-size;
+        line-height: $subheader-line-wide;
+        margin-top: $subheader-margin-top;
+        margin-bottom: $subheader-margin-bottom-wide;
+    }
+
     p, ol, ul {
         font-size: $body-size;
         line-height: $body-line;
-        margin-left: $mobile-margin-h;
-        margin-right: $mobile-margin-h;
         margin-bottom: $body-margin-bottom;
     }
 
     .annotationCard {
         font-size: $body-size;
         line-height: $body-line;
-        margin-left: $mobile-margin-h;
-        margin-right: $mobile-margin-h;
         margin-bottom: $body-margin-bottom;
         font-weight: normal;
         font-style: normal;
@@ -227,13 +236,9 @@ figure {
     }
 
     pre {
-        margin-left: $mobile-margin-h;
-        margin-right: $mobile-margin-h;
     }
 
     figcaption {
-        margin-left: $mobile-margin-h;
-        margin-right: $mobile-margin-h;
     }
 
     figure {
