--- a/src/App.scss
+++ b/src/App.scss
@@ -8,10 +8,20 @@
 @import "styles/navbars";
 @import "styles/userCard";
 
+$mobile-margin-h: 8px;
+$margin-h: 32px;
+$negative-mobile-margin: -8px;
+$negative-margin: -32px;
+
 html, body {
     font-family: 'Overpass', 'Roboto', sans-serif;
     background: $color-bg;
     color: $color-blk;
+}
+
+.marginControl {
+    margin-left: $margin-h;
+    margin-right: $margin-h;
 }
 
 .page {
@@ -34,20 +44,21 @@ picture {
 
 img {
     width: 100%;
-    margin-left: auto;
-    margin-right: auto;
     max-height: 60vh;
-}
-
-p > img {
     padding: 0;
-    margin-left: -8px;
-    margin-right: -8px;
-    width: calc(100% + 16px);
+    margin-top: 32px;
+    margin-bottom: 48px;
+    margin-left: -32px;
+    margin-right: -32px;
+    width: calc(100% + 64px);
 }
 
 .imageCover {
-    
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-left: -32px;
+    margin-right: -32px;
+    width: calc(100% + 64px);   
 }
 
 figure {
@@ -65,6 +76,10 @@ iframe {
 
 hr {
     display: none;
+}
+
+.whitelogo {
+    fill: #f8f8f8;
 }
 
 .AppHolder {
@@ -91,6 +106,11 @@ hr {
 }
 
 @media screen and (max-width: 480px) {
+    .marginControl {
+        margin-left: $mobile-margin-h;
+        margin-right: $mobile-margin-h;
+    }
+
     .AppHolder {
         width: 100%;
     }
@@ -105,5 +125,17 @@ hr {
 
     .App {
         width: 100%;
+    }
+
+    img {
+        margin-left: -8px;
+        margin-right: -8px;
+        width: calc(100% + 16px);
+    }
+    
+    .imageCover {
+        margin-left: -8px;
+        margin-right: -8px;
+        width: calc(100% + 16px);   
     }
 }
