--- a/src/styles/_annotation.scss
+++ b/src/styles/_annotation.scss
@@ -14,9 +14,14 @@
     width: 20rem;
 }
 
+.annotationProfileHolder {
+    margin-top: -20px;
+}
+
 .annotationProfile {
     width: 32px;
     min-width: 32px;
+    margin-left: 16px;
     margin-right: 16px;
     border-radius: 16px;
     margin-top: -20px;
@@ -89,9 +94,14 @@
         margin-top: 0px;
     }
 
+    .annotationProfileHolder {
+        margin-top: 8px;
+    }
+
     .annotationProfile {
         width: 24px;
         min-width: 24px;
+        margin-left: 8px;
         margin-right: 8px;
         border-radius: 12px;
         margin-top: 8px;
