--- a/src/styles/_navbars.scss
+++ b/src/styles/_navbars.scss
@@ -7,11 +7,34 @@
 }
 
 .doc_bar {
-    width: 100%;
     height: 64px;
     background-color: $color-white-trans;
     position: fixed;
     top: 0;
+    margin-left: -32px;
+    margin-right: -32px;
+    width: calc(100% + 64px);   
+}
+
+.bottom_bar {
+    height: 84px;
+    background-color: $color-blk;
+    display: flex;
+    flex-direction: row;
+    align-items: center; 
+    margin-top: 84px;
+    margin-left: -32px;
+    margin-right: -32px;
+    width: calc(100% + 64px);  
+}
+
+.bottom_bar_inner {
+    margin-left: -32px;
+    margin-right: -32px;
+    width: calc(100% + 64px);  
+    display: flex;
+    flex-direction: row;
+    align-items: center; 
 }
 
 .doc_bar_icons {
@@ -51,6 +74,11 @@ svg {
     height: 42px;
 }
 
+.banner_logo {
+    width: 168px;
+    height: 42px;
+}
+
 @media screen and (max-width: 480px) {
 
     .doc_page {
@@ -58,8 +86,23 @@ svg {
     }
 
     .doc_bar {
-        width: 100%;
         height: 48px;
+        margin-left: -8px;
+        margin-right: -8px;
+        width: calc(100% + 16px);   
+    }
+
+    .bottom_bar {
+        height: 64px;
+        margin-left: -8px;
+        margin-right: -8px;
+        width: calc(100% + 16px);  
+    }
+
+    .bottom_bar_inner {
+        margin-left: 0px;
+        margin-right: 0px;
+        width: 100%;
     }
 
     .doc_bar_icons {
@@ -67,9 +110,14 @@ svg {
         margin-left: 8px;
         margin-right: 8px;
     }
-    
+
     .icon_logo {
         width: 32px;
+        height: 32px;
+    }
+
+    .banner_logo {
+        width: 128px;
         height: 32px;
     }
 }
