--- a/src/App.css
+++ b/src/App.css
@@ -143,7 +143,7 @@ figure {
 @media screen and (max-width: 480px) {
   html, body {
     font-size: 16px;
-    line-height: 24px;
+    line-height: 28px;
   }
 
   h1 {
@@ -168,13 +168,13 @@ figure {
 
   p, ol, ul {
     font-size: 16px;
-    line-height: 24px;
+    line-height: 28px;
     margin-bottom: 24px;
   }
 
   .annotationCard {
     font-size: 16px;
-    line-height: 24px;
+    line-height: 28px;
     margin-bottom: 24px;
     font-weight: normal;
     font-style: normal;
@@ -182,7 +182,7 @@ figure {
 
   a {
     font-size: 16px;
-    line-height: 24px;
+    line-height: 28px;
     margin-bottom: 24px;
   }
 
@@ -202,7 +202,7 @@ figure {
 }
 
 .annotationProfileHolder {
-  margin-top: -20px;
+  margin-top: -16px;
 }
 
 .annotationProfile {
@@ -211,7 +211,7 @@ figure {
   margin-left: 16px;
   margin-right: 16px;
   border-radius: 16px;
-  margin-top: -20px;
+  margin-top: -16px;
 }
 
 .annotationContent {
@@ -309,7 +309,7 @@ figure {
 
 .bottom_bar {
   height: 84px;
-  background-color: #373B40;
+  border-top: 0px solid #373B40;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -329,6 +329,16 @@ figure {
 }
 
 .doc_bar_icons {
+  height: 64px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 0px;
+  margin-right: 8px;
+}
+
+.bottom_bar_icons {
   height: 64px;
   display: flex;
   flex-direction: row;
@@ -399,6 +409,12 @@ svg {
     height: 48px;
     margin-left: 8px;
     margin-right: 8px;
+  }
+
+  .bottom_bar_icons {
+    height: 48px;
+    margin-left: 0px;
+    margin-right: 0px;
   }
 
   .icon_logo {
@@ -532,6 +548,10 @@ iframe {
 
 hr {
   display: none;
+}
+
+.blacklogo {
+  fill: #373B40;
 }
 
 .whitelogo {
