--- a/src/styles/_annotation.scss
+++ b/src/styles/_annotation.scss
@@ -15,7 +15,7 @@
 }
 
 .annotationProfileHolder {
-    margin-top: -20px;
+    margin-top: -16px;
 }
 
 .annotationProfile {
@@ -24,7 +24,7 @@
     margin-left: 16px;
     margin-right: 16px;
     border-radius: 16px;
-    margin-top: -20px;
+    margin-top: -16px;
 }
 
 .annotationContent {
@@ -45,8 +45,8 @@
     margin-bottom: 8px;
     margin-left: 16px;
     margin-top: 16px;
-    font-size: $body-size;
-    line-height: $body-line;
+    font-size: $d-detail-size;
+    line-height: $d-detail-line;
 }
 
 .annotationText {
@@ -55,8 +55,8 @@
     margin-left: 16px;
     word-wrap: break-word;
     max-width: 100%;
-    font-size: $body-size;
-    line-height: $body-line;
+    font-size: $d-detail-size;
+    line-height: $d-detail-line;
 }
 
 .annotationTime {
@@ -65,8 +65,8 @@
     margin-right: 16px;
     margin-left: 16px;
     margin-bottom: 16px;
-    font-size: $body-size;
-    line-height: $body-line;
+    font-size: $d-detail-size;
+    line-height: $d-detail-line;
 }
 
 .appAnnotation {
