--- a/src/styles/_annotation.scss
+++ b/src/styles/_annotation.scss
@@ -40,11 +40,18 @@
     max-width: calc(100% - 48px);
 }
 
+.annotationBar {
+    margin-top: 16px;
+    margin-right: 16px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
 .annotationAuthor {
     font-weight: bold;
     margin-bottom: 8px;
     margin-left: 16px;
-    margin-top: 16px;
     font-size: $d-detail-size;
     line-height: $d-detail-line;
 }
@@ -79,6 +86,8 @@
     }
     
     .annotationMobile {
+        float: left;
+        width: 100%;
         display: block;
     }
 
