--- a/src/styles/_annotation.scss
+++ b/src/styles/_annotation.scss
@@ -32,6 +32,7 @@
     flex: 1;
     flex-direction: column;
     margin-top: -44px;
+    background-color: $color-bg;
     border-style: solid;
     border-color: $color-blk;
     border-radius: 16px;
