--- a/src/App.scss
+++ b/src/App.scss
@@ -40,13 +40,17 @@ picture {
 
 img {
     width: 100%;
-    max-height: 60vh;
+    max-height: 75vh;
     padding: 0;
     margin-top: 32px;
     margin-bottom: 48px;
     margin-left: $negative-margin;
     margin-right: $negative-margin;
     width: calc(100% + 64px);
+}
+
+p > img {
+    margin-bottom: 0px;
 }
 
 .imageCover {
