--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
 @import url('https://fonts.googleapis.com/css?family=Overpass');
+@import url('https://fonts.googleapis.com/css?family=Arvo');
 @import "styles/basevars";
 @import "styles/text";
 @import "styles/annotation";
@@ -103,6 +104,8 @@ hr {
 
 .appFrame {
     position: absolute;
+    display: flex;
+    flex-direction: column;
     width: 65rem;
     margin-left: auto;
     margin-right: auto;
@@ -161,6 +164,15 @@ hr {
     .AppHolder {
         width: 100%;
     }
+
+    .contentFrame {
+        width: 100%;
+    }
+    
+    .appFrame {
+        width: 100%;
+    }
+
 
     .Sidebar {
         display: none;
