--- a/src/styles/_text.scss
+++ b/src/styles/_text.scss
@@ -70,9 +70,9 @@ h1 {
     margin-block-end: 0;
     margin-block-start: 0;
     margin-top: $header-margin-top;
-    font-weight: 700;
+    font-weight: 600;
 
-    font-family: 'Roboto Condensed';
+    font-family: 'Arvo';
 }
 
 h2, h3, h4, h5, h6 {
