--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,18 @@
   font-weight: 400;
   src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff");
 }
+@font-face {
+  font-family: "Noe Display";
+  src: url(./assets/fonts/noe/noe-display-regular.woff);
+}
+@font-face {
+  font-family: "Noe Display";
+  src: url(./assets/fonts/noe/noe-display-bold.woff);
+  font-weight: bold;
+}
 html, body {
-  font-size: 18px;
-  line-height: 30px;
+  font-size: 20px;
+  line-height: 34px;
 }
 
 h1, h2, h3, h4 {
@@ -17,18 +26,18 @@ h1, h2, h3, h4 {
 }
 
 p, ol, ul, a {
-  font-size: 18px;
-  line-height: 30px;
+  font-size: 20px;
+  line-height: 34px;
 }
 
 h1 {
-  font-size: 46px;
+  font-size: 48px;
   line-height: 56px;
   margin-block-end: 0;
   margin-block-start: 0;
   margin-top: 0;
   font-weight: 600;
-  font-family: "Arvo";
+  font-family: "Noe Display";
 }
 
 h2, h3, h4, h5, h6 {
@@ -88,7 +97,7 @@ code {
   color: #9BA5B1;
   margin: 8px;
   display: inline-block;
-  max-width: calc(100% - 16px);
+  max-width: calc(100% - 32px);
   font-size: 16px;
   overflow-x: scroll;
 }
@@ -143,8 +152,8 @@ figure {
   font-weight: bold;
   line-height: 21px;
   color: #36B9E3;
-  padding-left: 8px;
-  padding-right: 8px;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 .text-highlight-open {
@@ -158,8 +167,8 @@ figure {
   }
 
   h1 {
-    font-size: 32px;
-    line-height: 46px;
+    font-size: 36px;
+    line-height: 48px;
   }
 
   h2, h3, h4, h5, h6 {
@@ -528,7 +537,7 @@ svg {
   }
 }
 html, body {
-  font-family: "Overpass", "Roboto", sans-serif;
+  font-family: "Roboto", "Overpass", "Roboto", sans-serif;
   background: #f8f8f8;
   color: #373B40;
 }
@@ -607,14 +616,14 @@ hr {
 .AppHolder {
   display: flex;
   flex-direction: row;
-  width: 65rem;
+  width: 60rem;
   margin-left: auto;
   margin-right: auto;
 }
 
 .contentFrame {
   position: relative;
-  width: 65rem;
+  width: 60rem;
   margin-left: auto;
   margin-right: auto;
 }
@@ -623,7 +632,7 @@ hr {
   position: absolute;
   display: flex;
   flex-direction: column;
-  width: 65rem;
+  width: 60rem;
   margin-left: auto;
   margin-right: auto;
 }
@@ -638,7 +647,7 @@ hr {
 }
 
 .App {
-  width: 45rem;
+  width: 40rem;
 }
 
 .Sidebar {
@@ -665,18 +674,18 @@ textarea:focus, textarea:active {
   border-color: #373B40;
   border-radius: 16px;
   padding: 16px;
+  margin: 0;
   font-size: 16px;
   border-width: 1px;
-  margin: 8px;
-  width: calc(100% - 16px);
+  width: calc(100% - 32px);
   height: 96px;
   background: #f8f8f8;
 }
 
 @media screen and (max-width: 480px) {
   .marginControl {
-    margin-left: 8px;
-    margin-right: 8px;
+    margin-left: 16px;
+    margin-right: 16px;
   }
 
   .AppHolder {
@@ -706,13 +715,13 @@ textarea:focus, textarea:active {
   img {
     margin-left: -8px;
     margin-right: -8px;
-    width: calc(100% + 16px);
+    width: calc(100% + 32px);
   }
 
   .imageCover {
     margin-left: -8px;
     margin-right: -8px;
-    width: calc(100% + 16px);
+    width: calc(100% + 32px);
   }
 }
 
