--- a/src/App.scss
+++ b/src/App.scss
@@ -11,7 +11,7 @@
 
 
 html, body {
-    font-family: 'Overpass', 'Roboto', sans-serif;
+    font-family: 'Roboto', 'Overpass', 'Roboto', sans-serif;
     background: $color-bg;
     color: $color-blk;
 }
@@ -90,14 +90,14 @@ hr {
 .AppHolder {
     display: flex;
     flex-direction: row;
-    width: 65rem;
+    width: 60rem;
     margin-left: auto;
     margin-right: auto;
 }
 
 .contentFrame {
     position: relative;
-    width: 65rem;
+    width: 60rem;
     margin-left: auto;
     margin-right: auto;
 }
@@ -106,7 +106,7 @@ hr {
     position: absolute;
     display: flex;
     flex-direction: column;
-    width: 65rem;
+    width: 60rem;
     margin-left: auto;
     margin-right: auto;
 }
@@ -121,7 +121,7 @@ hr {
 }
 
 .App {
-    width: 45rem;
+    width: 40rem;
 }
 
 .Sidebar {
@@ -143,13 +143,13 @@ hr {
 }
 .takeaway {
     border-style: solid;
-    border-color: #373B40;
+    border-color: $color-blk;
     border-radius: 16px;
     padding: 16px;
+    margin: 0;
     font-size: 16px;
     border-width: 1px;
-    margin: 8px;
-    width: calc(100% - 16px);
+    width: calc(100% - 32px);
     height: 96px;
     background: #f8f8f8;
 }
@@ -189,12 +189,12 @@ hr {
     img {
         margin-left: -8px;
         margin-right: -8px;
-        width: calc(100% + 16px);
+        width: calc(100% + 32px);
     }
     
     .imageCover {
         margin-left: -8px;
         margin-right: -8px;
-        width: calc(100% + 16px);   
+        width: calc(100% + 32px);   
     }
 }
