span count/total update and headline font

--- a/src/styles/_basevars.scss
+++ b/src/styles/_basevars.scss
@@ -15,6 +15,11 @@
     font-weight: bold;
 }
 
+@font-face {
+    font-family: "Sabon";
+    src: url(./assets/fonts/sabon/Sabon-Roman.woff);
+}
+
 
 $mobile-margin-h: 16px;
 $margin-h: 32px;
