--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,10 @@
   src: url(./assets/fonts/noe/noe-display-bold.woff);
   font-weight: bold;
 }
+@font-face {
+  font-family: "Sabon";
+  src: url(./assets/fonts/sabon/Sabon-Roman.woff);
+}
 html, body {
   font-size: 20px;
   line-height: 34px;
@@ -31,13 +35,13 @@ p, ol, ul, a {
 }
 
 h1 {
-  font-size: 48px;
-  line-height: 56px;
+  font-size: 52px;
+  line-height: 64px;
   margin-block-end: 0;
   margin-block-start: 0;
   margin-top: 0;
   font-weight: 600;
-  font-family: "Noe Display";
+  font-family: "Sabon";
 }
 
 h2, h3, h4, h5, h6 {
@@ -208,6 +212,12 @@ figure {
 
   figure {
     margin-bottom: 24px;
+  }
+
+  .text_meta_url {
+    font-size: 12px;
+    line-height: 18px;
+    margin-top: 4px;
   }
 }
 .annotationMobile {
@@ -433,7 +443,7 @@ svg {
 
 @media screen and (max-width: 480px) {
   .doc_page {
-    margin-top: 56px;
+    margin-top: 16px;
   }
 
   .doc_bar {
