--- a/src/styles/_basevars.scss
+++ b/src/styles/_basevars.scss
@@ -32,8 +32,9 @@ $color-white-trans: rgba(248,248,248,.95);
 $color-blk: #373B40;
 $color-grey: #9BA5B1;
 $color-highlight: rgba(255,246,36,.25);
-$color-highlight-hover: #FFE70D;
+$color-highlight-hover: #FCF559;
 $color-blu: #36B9E3;
+$color-red: #D72323;
 
 $txt-wt: 400;
 $txt-wt-emp: 600;
