--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Condensed");
 @import url("https://fonts.googleapis.com/css?family=Overpass");
 @import url("https://fonts.googleapis.com/css?family=Arvo");
+@import url("https://use.typekit.net/tws3ibn.css");
 @font-face {
   font-family: "San Francisco";
   font-weight: 400;
@@ -40,8 +41,9 @@ h1 {
   margin-block-end: 0;
   margin-block-start: 0;
   margin-top: 0;
-  font-weight: 600;
-  font-family: "Sabon";
+  font-weight: 900;
+  font-style: normal;
+  font-family: linotype-sabon;
 }
 
 h2, h3, h4, h5, h6 {
@@ -89,12 +91,33 @@ li {
 }
 
 a {
-  color: #36B9E3;
+  position: relative;
+  color: #373B40;
   text-decoration: none;
-  font-weight: 600;
   margin: 0;
   text-align: left;
   margin-bottom: 24px;
+  transition: color 0.3s;
+}
+
+a::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  display: inline-block;
+  height: 1em;
+  width: 100%;
+  border-bottom: 2px solid #373B40;
+  margin-top: 8px;
+  transition: border-bottom 0.3s;
+}
+
+a:hover {
+  color: #36B9E3;
+}
+
+a:hover::after {
+  border-bottom: 2px solid #36B9E3;
 }
 
 code {
@@ -121,7 +144,6 @@ figure {
 .text_meta_date {
   margin-top: 16px;
   color: #9BA5B1;
-  font-style: italic;
   font-size: 16px;
 }
 
@@ -144,11 +166,11 @@ figure {
 }
 
 .text-annotation:hover {
-  background-color: #FFE70D;
+  background-color: #FCEB59;
 }
 
 .text-annotation-hover {
-  background-color: #FFE70D;
+  background-color: #FCEB59;
 }
 
 .text-download {
@@ -212,6 +234,11 @@ figure {
 
   figure {
     margin-bottom: 24px;
+  }
+
+  .text_meta_date {
+    font-size: 12px;
+    line-height: 18px;
   }
 
   .text_meta_url {
@@ -448,16 +475,16 @@ svg {
 
   .doc_bar {
     height: 48px;
-    margin-left: -8px;
-    margin-right: -8px;
-    width: calc(100% + 16px);
+    margin-left: -16px;
+    margin-right: -16px;
+    width: calc(100% + 32px);
   }
 
   .bottom_bar {
     height: 64px;
-    margin-left: -8px;
-    margin-right: -8px;
-    width: calc(100% + 16px);
+    margin-left: -16px;
+    margin-right: -16px;
+    width: calc(100% + 32px);
   }
 
   .bottom_bar_inner {
@@ -547,7 +574,7 @@ svg {
   }
 }
 html, body {
-  font-family: "Roboto", "Overpass", "Roboto", sans-serif;
+  font-family: "Roboto", sans-serif;
   background: #f8f8f8;
   color: #373B40;
 }
@@ -576,14 +603,15 @@ picture {
 }
 
 img {
-  width: 100%;
   max-height: 75vh;
+  max-width: calc(100% + 64px);
+  height: auto;
+  width: auto;
   padding: 0;
   margin-top: 32px;
   margin-bottom: 48px;
   margin-left: -32px;
   margin-right: -32px;
-  width: calc(100% + 64px);
 }
 
 p > img {
